# WeatherApp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  IWeatherEngine.hpp  RequestWeatherEngine.cpp  RequestWeatherEngine.hpp  WeatherData.hpp  WeatherService.cpp  WeatherService.hpp
test/: CMakeLists.txt  TestWeatherEngine.cpp  TestWeatherEngine.hpp  weather_data_test.cpp
